Bug #42443 | Cluster Partition pruning of range partition and unique key - broken | ||
---|---|---|---|
Submitted: | 29 Jan 2009 7:27 | Modified: | 4 Feb 2009 15:37 |
Reporter: | Tomas Ulin | Email Updates: | |
Status: | Closed | Impact on me: | |
Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
Version: | Cluster 6.3 | OS: | Any |
Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[29 Jan 2009 7:27]
Tomas Ulin
[29 Jan 2009 9:08]
Tomas Ulin
same breakage in update master> update t1 set c=7 where a=6; Query OK, 0 rows affected (0.02 sec) Rows matched: 0 Changed: 0 Warnings: 0 master> select * from t1; +---+---+---+ | a | b | c | +---+---+---+ | 6 | 0 | 0 | +---+---+---+ 1 row in set (0.01 sec)
[29 Jan 2009 10:05]
Tomas Ulin
patch for bug
Attachment: bug42443.patch (text/x-diff), 5.35 KiB.
[29 Jan 2009 13:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64471 2815 Tomas Ulin 2009-01-29 bug#42443: Cluster Partition pruning of range partition and unique key - broken
[29 Jan 2009 13:23]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:tomas.ulin@sun.com-20090129132135-lr7qtcjlrm9wixm7) (version source revid:tomas.ulin@sun.com-20090129131717-qh6roe4qi3yir4ws) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[29 Jan 2009 13:49]
Bugs System
Pushed into 5.1.31-ndb-6.4.3 (revid:tomas.ulin@sun.com-20090129134733-oa981knh5rgl7ztx) (version source revid:tomas.ulin@sun.com-20090129134733-oa981knh5rgl7ztx) (merge vers: 5.1.31-ndb-6.4.3) (pib:6)
[30 Jan 2009 14:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64643 2823 Tomas Ulin 2009-01-30 Bug #42443 Cluster Partition pruning of range partition and unique key - broken - change of prev patch
[30 Jan 2009 14:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64644 2824 Tomas Ulin 2009-01-30 Bug #42443 Cluster Partition pruning of range partition and unique key - broken - change of prev patch
[30 Jan 2009 14:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64648 2825 Tomas Ulin 2009-01-30 Bug #42443 Cluster Partition pruning of range partition and unique key - broken - change of prev patch
[30 Jan 2009 15:13]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:jonas@mysql.com-20090130142804-6rq12kaqi814rp7n) (version source revid:jonas@mysql.com-20090130142804-6rq12kaqi814rp7n) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[30 Jan 2009 15:16]
Bugs System
Pushed into 5.1.31-ndb-6.4.3 (revid:jonas@mysql.com-20090130143059-nbhc491rq3v6mdph) (version source revid:jonas@mysql.com-20090130143059-nbhc491rq3v6mdph) (merge vers: 5.1.31-ndb-6.4.3) (pib:6)
[31 Jan 2009 9:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64715 2827 Jonas Oreland 2009-01-31 ndb - bug#42443 - yet another fix for rande/list partitioning and unique indexes
[31 Jan 2009 9:13]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:jonas@mysql.com-20090131091230-ihspxpgcqom3e96e) (version source revid:jonas@mysql.com-20090131091230-ihspxpgcqom3e96e) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[31 Jan 2009 9:17]
Bugs System
Pushed into 5.1.31-ndb-6.4.3 (revid:jonas@mysql.com-20090131091534-n0edlfw8vrkxsmr3) (version source revid:jonas@mysql.com-20090131091534-n0edlfw8vrkxsmr3) (merge vers: 5.1.31-ndb-6.4.3) (pib:6)
[4 Feb 2009 15:37]
Jon Stephens
Discussed with Tomas, officially we still don't support range partitioning for Cluster so there's nothing to document here for now. Closed without further action.