Bug #42443  Cluster Partition pruning of range partition and unique key - broken - change of prev patch